fixed extra space on right side in mobile view

--- a/p-1-Blog-Page/Css/main.css
+++ b/p-1-Blog-Page/Css/main.css
@@ -126,6 +126,7 @@ a {
         "aside"
         "footer";
         grid-template-rows: 50px 1fr 430px 120px;
+        grid-template-columns: 1fr;
     }
 
     
